--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -107,6 +107,11 @@ a:hover {
     background-color: #719D9A;
 }
 
+.container{
+    border: 2px solid black;
+}
+
+
 /*FTC*/
 .three {
     background-color: #CF5D2D;
@@ -220,64 +225,3 @@ nav {
     transition: all 0.3s ease;
 }
 
-@media screen and (max-width:1024px) {
-    .nav-links {
-        width: 60%;
-    }
-}
-
-@media screen and (max-width:768px) {
-    body {
-        overflow-x: hidden;
-    }
-    .nav-links {
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: #18343C;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-    }
-
-    .nav-links li {
-        opacity: 0;
-    }
-    .burger {
-        display: block; 
-    }
-   
-}
-
-.nav-active {
-    transform: translateX(0%);
-}
-
-@keyframes navLinkFade {
-    from{
-        opacity:0;
-        tranform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-.toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-
-}
-
-.toggle .line2 {
-    opacity: 0;
-}
-
-.toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-    
-}
